refacto all usage of records