@@ -34,8 +34,8 @@ public class PublishTradesmenPendingSubscriptionPaymentService implements Comman
         eventBus.publish(
                 TradesmenSubscriptionPendingPayment.withTradesmen(
                         tradesmenPendingPayment.stream()
-                                .map(tradesman -> TradesmanEventEntity.withEntityIdOnly(tradesman.entityId))
-                                .collect(Collectors.toList())
+                                .map(tradesman -> TradesmanEventEntity.withEntityIdOnly(tradesman.entityId()))
+                                .toList()
                 )
         );
         return null;
@@ -43,22 +43,22 @@ public class PublishTradesmenPendingSubscriptionPaymentService implements Comman
 
     public void updateSubscriptionToPending(Tradesman tradesman) {
         Tradesman updatedTradesman = Tradesman.of(
-                tradesman.entityId,
-                tradesman.lastname,
-                tradesman.firstname,
-                tradesman.email,
-                tradesman.password,
+                tradesman.entityId(),
+                tradesman.lastname(),
+                tradesman.firstname(),
+                tradesman.email(),
+                tradesman.password(),
                 SubscriptionStatus.PENDING_PAYMENT,
-                tradesman.paymentMethod
+                tradesman.paymentMethod()
         );
         tradesmen.save(updatedTradesman);
         eventBus.publish(TradesmanUpdated.withTradesman(TradesmanEventEntity.of(
-                tradesman.entityId,
-                tradesman.lastname.value,
-                tradesman.firstname.value,
-                tradesman.email.value,
-                tradesman.password.value,
-                tradesman.paymentMethod
+                tradesman.entityId(),
+                tradesman.lastname().value,
+                tradesman.firstname().value,
+                tradesman.email().value,
+                tradesman.password().value,
+                tradesman.paymentMethod()
         )));
     }
 
